--- a/Cybersecurity Subpages/CSS/DDOS.css
+++ b/Cybersecurity Subpages/CSS/DDOS.css
@@ -1,3 +1,62 @@
-header{
+header {
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    text-align: center;
+}
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin-top: 50px;
+}
+input {
+    padding: 10px;
+    font-size: 16px;
+}
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-left: 10px;
+}
+#guessMessage {
+    background-color: white;
+    margin-top: 20px;
+    font-size: 18px;
+}
+h1{
+    background-color: black;
+    color: yellow;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    font-size: max(2vw, 7vw);
+    margin:0 auto
+}
 
+body{
+    background-image: url('images/Lil-la_Rap.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;    
+}
+
+footer{
+    background-color: silver;
+    font-size:3vw; 
+    color:black;
+    text-align:center; 
+    top:10px;
+    font-family: Roboto;
+}
+
+footer {
+    font-size: 13px;
+    color: navy;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-text {
+    margin: 0px;
 }
