--- a/cybersecurityMain.css
+++ b/cybersecurityMain.css
@@ -47,3 +47,16 @@ footer{
     top:10px;
     font-family: Roboto;
 }
+
+footer {
+    font-size: 13px;
+    color: navy;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-text {
+    margin: 0px;
+}  
