--- a/Cybersecurity Subpages/CSS/socialEngineering.css
+++ b/Cybersecurity Subpages/CSS/socialEngineering.css
@@ -8,6 +8,11 @@ body {
     text-align: center;
     margin-top: 50px;
 }
+nav {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%;
+}
 input {
     padding: 10px;
     font-size: 16px;
