--- a/CSS/evilTwin.css
+++ b/CSS/evilTwin.css
@@ -2,6 +2,7 @@ header {
     padding-bottom: 10px;
     margin-bottom: 0px;
     text-align: center;
+    border-radius: 10%;
 }
 body {
     font-family: Arial, sans-serif;
@@ -37,7 +38,7 @@ h1{
 }
 
 body{
-    background-image: url('images/Lil-la_Rap.png');
+    background-image: url('images/background.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
